fixed text alignment

--- a/subdir/assets/quote.css
+++ b/subdir/assets/quote.css
@@ -17,6 +17,7 @@ h1 {
     font-weight: lighter;
     text-decoration: none;
     font-family: 'Satisfy', cursive;
+    text-align: center;
 }
 h2 {
     font-size: 3.0em;
